adjust, fix typo

--- a/articles/002.md
+++ b/articles/002.md
@@ -1,50 +1,52 @@
 在[编辑体验增强](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-1-authoring-experience-improvements)之外，对Drupal的最终用户来说，还有一个焦点问题是如何让Drupal 8对移动设备更加友好，这也是顺应当今移动设备访问量暴增的潮流之举。
 
-##移动优先
+## 移动优先
 
 Drupal 8用户会发现，Drupal 8从安装器到模块页面的设计核心思想都是以移动为中心的。每一个新特性，例如就地编辑等功能，都被设计为可以在移动设备的小屏幕上顺畅运行。读者可以尝试用手中的设备尝试访问Drupal 8，如果发现任何Bug，[欢迎指出](https://drupal.org/node/2152519)（呃....最好是有效的BUG）。
 
-![iphone](/sites/default/files/get_image/09d309bed38a0de54da15078a93bd210.png)
+![iphone](https://www.acquia.com/sites/default/files/screen_shot_2014-05-12_at_8.32.38_pm.png)
 
-(上图是Module页面的一个搜索功能，在Drupal 7中可以使用[Module Filter模块](https://drupal.org/project/module_filter)实现类似体验)。
+(上图是后台模块页面的一个搜索功能，在Drupal 7中可以使用[Module Filter模块](https://drupal.org/project/module_filter)实现类似体验)。
 
-##随处可见的响应式
+## 随处可见的响应式
 
 未来五年中，将会有多到无法预测的设备接入互联网，为了追随这种趋势，Drupal 8将响应式设计纳入所有功能之中。
 
 对入门者来说，所有的核心主题都是响应式的，菜单，Block等元素在移动设备的屏幕上会自动重新排布（如果Viewport太紧凑，可能会把纵向变成横向）。响应式的图片处理也是内置的，所以同一图片在桌面设备会以大尺寸展现，而在平板或手机上进行缩小显示。
 
-![mobile and pc](/sites/default/files/get_image/3dec8100934d3cecce5070d542d02b8f.png)
+![mobile and pc](https://www.acquia.com/sites/default/files/screen_shot_2014-05-12_at_8.33.26_pm.png)
 
 Drupal 8也对Table提供了响应式的支持，表格的列可以定义为高中低不同的优先级，在宽屏幕上会显示所有列，而屏幕变窄以后，次要的列就开始隐藏了。这一特性也内置在Views模块中，所以用户可以自行定义自己的响应式管理界面。
 
-![admin](/sites/default/files/get_image/1ede8c810a4365d6dfbb43df43a03e7e.png)
+![admin](https://www.acquia.com/sites/default/files/screen_shot_2014-05-12_at_8.48.02_pm.png)
 
 在Drupal 7中可以使用[Responsive Bartik](https://drupal.org/project/responsive_bartik)以及[Responsive Tables](https://drupal.org/project/responsive_tables)模块来完成类似功能。也有为数众多的Drupal 7响应式主题，包括[Omega](http://drupal.org/project/omega)和[Zen](http://drupal.org/project/zen)，利用这些主题可以为自己的站点添加响应式特性。
 
-##移动设备友好的工具栏
+## 移动设备友好的工具栏
 
-Drupal 8的工具栏亮点多多，在宽屏幕上，他会自动展开并置为横向；而在小屏幕上则会折叠称谓图标并变为纵向排列。和其他Drupal 8的前端新特性一样，这一功能对访问性的促进非常大，在各种屏幕尺寸下都可以实现流畅的站内跳转。
+Drupal 8的工具栏亮点多多，在宽屏幕上，他会自动展开并置为横向；而在小屏幕上则会折叠成为图标并变为纵向排列。和其他Drupal 8的前端新特性一样，这一功能对访问性的促进非常大，在各种屏幕尺寸下都可以实现流畅的站内跳转。
 
-![Toolbar](/sites/default/files/get_image/93697be8247dbc4442ec5b87f99953c2.png)
+![Toolbar](https://www.acquia.com/sites/default/files/screen_shot_2014-05-12_at_8.48.18_pm.png)
 
-如果想在Drupal 7中看到类似特性，可以去看看[ Mobile Friendly Navigation Toolbar](https://drupal.org/project/navbar)模块。
+如果想在Drupal 7中看到类似特性，可以去看看[Mobile Friendly Navigation Toolbar](https://drupal.org/project/navbar)模块。
 
-##响应式阅览
+## 响应式阅览
 
 这一部分尚未确定是否能够同Drupal 8核心同时完成，Drupal 7中的[Responsive Preview](https://drupal.org/project/responsive_preview)模块提供了一种易用的，集成到CMS中的预览能力，能够迅速确定你的站点在多种不同的，可定义的设备上的大致的横向或是纵向的显示效果，而不用在硬件上投入几万美金。
 
-![baby-ver](/sites/default/files/get_image/2991b46bdfed6bfdb61fa1bc39c18b4d.png)
+![baby-ver](https://www.acquia.com/sites/default/files/screen_shot_2014-05-12_at_8.36.02_pm.png)
 
-![baby-hor](/sites/default/files/get_image/ce8d91cec18fef97fe2db5b618944d24.png)
+![baby-hor](https://www.acquia.com/sites/default/files/screen_shot_2014-05-12_at_8.36.12_pm.png)
 
-##前端的性能
+## 前端的性能
 
 对于移动体验来说，性能是一个很大决定性的影响因素。所以，在Drupal 8中投入了很多精力来减轻Drupal 8前端的重量。例如，多数情况下，jQuery会被置换为原生JavaScript，Drupal 8对匿名访问者不会载入JavaScript文件。一些JS密集的功能，例如Overlay模块被移除，以保证对移动设备的友好性（在管理工具栏中会出现一个"Back to site"连接，在Drupal 7中实现等价功能可以使用[Escape Admin模块](https://drupal.org/project/escape_admin)）。
 
-![Back to site](/sites/default/files/get_image/1f42261185d17605ada61920eab6e088.png)
+![Back to site](https://www.acquia.com/sites/default/files/screen_shot_2014-05-12_at_9.00.33_pm.png)
 
 
-##接下来
+## 接下来
 
-下周将会讲述[Drupal 8对网站建设的改进](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-3-site-builder-improvements)。
+下一次将会讲述[Drupal 8对网站建设的改进](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-3-site-builder-improvements)。
+
+原文链接：https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-2-mobile-improvements
