--- a/articles/008.md
+++ b/articles/008.md
@@ -1,20 +1,20 @@
-##我为什么需要关注Drupal 8？
+## 我为什么需要关注Drupal 8？
 
 起初Drupal是为开发者设计的，在过去的日子里，Drupal提供了一系列的API，让用户能够利用代码来构建网站，这其中包括内容录入Form、管理页面以及侧边栏Block等。在后期的版本尤其是Drupal 7中，进行了一些为非技术用户的倾斜，为基础任务提供了用户界面（安装、数据建模、信息架构以及着陆页等）。现在多数Drupal站点都会安装一些第三方模块例如可视化编辑器，Views等等。在Drupal核心和第三方模块的支持下，Drupal开始为[一部分最大规模的重要网站](http://www.drupalshowcase.com/)提供支撑。
 
-Drupal 8在Drupal 7的成功基础之上更进一步，顺应民意，集成了更多的功能，例如[改进的编辑体验](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-1-authoring-experience-improvements)、完备的[多语言功能](https://drupal.fleeto.us/translation/ultimate-guide-drupal-8-episode-4-multilingual-improvements)、大量的[建站功能](https://drupal.fleeto.us/translation/ultimate-guide-drupal-8-episode-3-site-builder-improvements)。Drupal 8也更加贴近当代的Web潮流，[移动](https://drupal.fleeto.us/translation/httpswwwacquiacomblogultimate-guide-drupal-8-episode-2-mobile-improvements)优先的设计思路以及焕然一新的[前端](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-5-front-end-developer-improvements)。对开发者来说，Drupal 8提供了大量的[后台特性](https://drupal.fleeto.us/translation/new-back-end-features-drupal-8)以及[现代化的面向对象的基础代码](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-5-front-end-developer-improvements)。总的说来，Drupal 8为内容编辑、站点建设、开发和设计提供了强大的支持，使之成为一个稳固的项目基础，能更好的面对各种技术、设备和服务。
+Drupal 8在Drupal 7的成功基础之上更进一步，顺应民意，集成了更多的功能，例如[改进的编辑体验](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-1-authoring-experience-improvements)、完备的[多语言功能](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-4-multilingual-improvements)、大量的[建站功能](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-3-site-builder-improvements)。Drupal 8也更加贴近当代的Web潮流，[移动](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-2-mobile-improvements)优先的设计思路以及焕然一新的[前端](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-5-front-end-developer-improvements)。对开发者来说，Drupal 8提供了大量的[后台特性](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-6-new-back-end-features-drupal-8)以及[现代化的面向对象的基础代码](https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-7-code-changes-drupal-8)。总的说来，Drupal 8为内容编辑、站点建设、开发和设计提供了强大的支持，使之成为一个稳固的项目基础，能更好的面对各种技术、设备和服务。
 
 Drupal 7是一个稳定、健壮和成熟的平台，将在未来的几年中持续获得支持。很多Drupal 8的功能都可以在Drupal 7中以某种方式进行实现（稍后会披露更多内容）。Drupal 8很伟大，不过如果你等不及，Drupal 7仍然是个好选择。学习Drupal 8也是个好主意——在你的项目需要Drupal 8之前做好准备。
 
-##Drupal 8听起来很厉害！为什么还没发布？
+## Drupal 8听起来很厉害！为什么还没发布？
 
 一旦[严重问题(包括bug和task)](https://drupal.org/project/issues/search/drupal?status[]=Open&priorities[]=400&categories[]=1&categories[]=2&version[]=8.x&issue_tags_op=%3D)减少至0，Drupal 8的发布候选版就会创建。候选版在公开发布并不再产生严重问题后，Drupal 8就粉墨登场了。
 
 只要登录Drupal.org，就可以随时查看Drupal 8的进度，'Contributor Links'显示了各种问题的数量。
 
-![Contributor Links](/sites/default/files/get_image/40e526c74c3cb52d7dc76772f31ba777.png)
+![Contributor Links](https://www.acquia.com/sites/default/files/screen_shot_2014-09-19_at_12.03.08_am.png)
 
-##Drupal 8发布之后会怎样？
+## Drupal 8发布之后会怎样？
 
 Party，很多的Party。
 
@@ -22,19 +22,19 @@ Party，很多的Party。
 
 这意味着Drupal用户无需为了一个新的核心功能等待几年，我们会每几个月更新一次特性和API，直到这个平台达到成熟。这同时意味着不愿意冒险，更需要稳妥解决方案的用户可以只盯着LTS版本，几年做一次更新（连主版本升级都跳过）。
 
-##我什么时候可以开始使用Drupal 8？
+## 我什么时候可以开始使用Drupal 8？
 
 这个问题，主要在于你的角色：
 
 * 如果你是个模块开发者，你应该马上开始关注Drupal 8。目前还可以为Drupal 8提供有效的反馈，以确保你迁移模块所需要的功能会随Drupal 8一起发布。不过在发布之前，API还存在变化的可能，所以你需要在RC后跟进修改。
 
-* 如果你是一个文档作者、翻译者或设计师，注意Drupal 8的界面、界面文本和标记在第一个RC之前是不会冻结的，所以用户向的文档、翻译以及主题应该在RC1之后启动。当然，比较激进的开发者现在可以跟进，来发现我们尚未修补的问题。
+* 如果你是一个文档作者、翻译者或设计师，注意Drupal 8的界面、界面文本和标记在第一个RC之前是不会冻结的，所以面向用户的文档、翻译以及主题应该在RC1之后启动。当然，比较激进的开发者现在可以跟进，来发现我们尚未修补的问题。
 
 * 如果你有一群不介意协助修复核心Bug，进行模块迁移的开发人员，并且上线时间在2015年末或2016年，你可以在Drupal 8进入Beta后期或RC期开始建设你的Drupal 8站点。如果你需要一些新版本中的新特性，这一时机应该较为可靠。
 
 * 绝大多数站点应该在Drupal 8发布之后的几个月后，第三方模块的迁移大致完成后，才会开始进行使用。可以关注[Drupal 项目应用图表](https://www.drupal.org/project/usage/drupal)。当D7和D8两条线交叉时，意味着D8用户数开始超过D7，大多数的升级障碍已经解除，可以考虑跟进了。
 
-##好吧，那这段时间我该干什么？
+## 好吧，那这段时间我该干什么？
 
 继续用Drupal 7。Drupal 7是一个稳定、成熟、健壮、强大的平台，并且在Drupal 8 LTS发布之前会持续得到Bug修复的支持，在Drupal 9的LTS出现之前（多年以后吧），会持续得到安全更新。而且很多Drupal 8功能现在在Drupal 7中也能找到：
 
@@ -66,21 +66,21 @@ Party，很多的Party。
 
 * **Web Service**：RESTful Web Services: [https://drupal.org/project/restws](https://drupal.org/project/restws)
 
-##如何升级呢？
+## 如何升级呢？
 
 * 站点的内容（用户，文章等）以及众多的配置项（变量，Block设置等），Drupal 8为D6（已经在核心中）和D7（正在开发）提供了[升级方法](https://www.acquia.com/blog/d8migrate)来保障核心模块的升级（第三方模块需要编写自己的升级方法）。简单说来，你需要在搭建Drupal 8站点时，保持你的Drupal 6或7的站点的运行，然后运行一个类似现有update.php的脚本来进行内容迁移。如果验证通过，切换一下webroot，几乎无需停机就完成了。
 
 * 对于目前站点中使用的第三方模块，安装7.x版本的[Upgrade Status](https://drupal.org/project/upgrade_status)模块，这个模块会显示各模块的站点以及D8升级状态。
 
-* 站点中的自实现模块，就需要自行升级了。[Drupal Module Upgrader](https://drupal.org/project/drupalmoduleupgrader)项目能够协助你进行升级，并针对做出的变更出具报告。需要注意的是，这个项目还处于[非常活跃的开发状态](https://www.drupal.org/node/2319353)中，以跟进更多的Drupal 8 API，这个项目也不是全知全能的，所以还需要手工修正一些内容。
+* 站点中的自定义模块，就需要自行升级了。[Drupal Module Upgrader](https://drupal.org/project/drupalmoduleupgrader)项目能够协助你进行升级，并针对做出的变更出具报告。需要注意的是，这个项目还处于[非常活跃的开发状态](https://www.drupal.org/node/2319353)中，以跟进更多的Drupal 8 API，这个项目也不是全知全能的，所以还需要手工修正一些内容。
 
 * 站点中的自定义主题，必须转换为Twig，可以试试[Twigifier](https://drupal.org/sandbox/forest/1965070)项目，该项目尝试将这一步骤进行自动化处理。
 
-所以目前来说，你的升级过程主要取决于你目前站点的实际状况，总体看来，采用知名的第三方模块比自实现代码在升级上具有更大的优势。
+所以目前来说，你的升级过程主要取决于你目前站点的实际状况，总体看来，采用知名的第三方模块比自定义代码在升级上具有更大的优势。
 
 更多的关于Drupal 6/7升级到D8的信息，请阅读[https://www.acquia.com/blog/getting-your-site-ready-drupal-8](https://www.acquia.com/blog/getting-your-site-ready-drupal-8)。
 
-##有什么我能帮忙的？
+## 有什么我能帮忙的？
 
 想要Drupal 8快点来？来帮忙吧！
 
@@ -96,6 +96,8 @@ Party，很多的Party。
 
 * 希望为自己和其他开发者节省移植模块的时间？请参与编写[Drupal Module Upgrader](https://drupal.org/project/drupalmoduleupgrader)。
 
-##谢谢！
+## 谢谢！
 
 请为[2300多个Drupal 8贡献者](http://ericduran.github.io/drupalcores/)掌声！
+
+原文链接：https://www.acquia.com/blog/ultimate-guide-drupal-8-episode-8-answers-your-burning-questions
